--- a/src/main/resources/templates/homeStudent.html
+++ b/src/main/resources/templates/homeStudent.html
@@ -4,13 +4,25 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
     <head>
         <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <link rel="stylesheet" th:href="@{/css/picnic-css.css}"/>
+        <link rel="stylesheet" th:href="@{/css/style-css.css}"/>
     </head>
     <body>
-        <div>TODO write content</div>
+       <div> 
+            <a  class="button" th:href="@{/monProfil(monId=2)}" > mon profil </a> 
+        </div>
+       
+        
+        <ul class="card" th:each="proj : ${projects}">
+            <li>
+                <a  th:href="@{/projectDetail(cid=${proj.id})}" th:text ="${proj.name}"></a>          
+            </li>
+        </ul>
+        
     </body>
 </html>
