--- a/src/main/resources/templates/homeStudent.html
+++ b/src/main/resources/templates/homeStudent.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
+
 <html xmlns:th="http://www.thymeleaf.org">
     <head>
         <title>TODO supply a title</title>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <link rel="stylesheet" th:href="@{/css/picnic-css.css}"/>
-        <link rel="stylesheet" th:href="@{/css/style-css.css}"/>
+        <link rel="stylesheet" th:href="@{/css/picnic.css}"/>
+        <link rel="stylesheet" th:href="@{/css/style.css}"/>
 
 
     </head>
