creation of competition's form

--- a/src/main/resources/templates/profil_company.html
+++ b/src/main/resources/templates/profil_company.html
@@ -8,8 +8,9 @@ and open the template in the editor.
     <head>
         <link rel="stylesheet" type="text/css" th:href="@{/css/picnic.css}"/>
         <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
+        <script type="text/javascript" th:src="@{/js/vue.js}"></script>
         
-        <title>Mon Entreprise</title>
+        <title th:text="${company.nom}">Mon Entreprise</title>
         <meta charset="UTF-8"/>
     </head>
     <body th:inline="text">
@@ -28,7 +29,7 @@ and open the template in the editor.
                         </div>
                     </div>
                     <div id="search">
-                        <input type="text" placeholder="Recherche" size="40" maxlength="100"/>
+                        <input type="text" v-model="leMessage" size="40" maxlength="100"/>
                     </div>
                 </div>
             </div>
@@ -49,7 +50,7 @@ and open the template in the editor.
                             [[${company.ville}]] - 120 Abonés
                         </div>
                         <div>
-                            <button>Suivre</button>
+                            <button>{{leMessage}}</button>
                         </div>
                     </div>
                 </div>
@@ -157,9 +158,9 @@ and open the template in the editor.
                                 </form>
                             </section>
                             <footer>
-                              <a class="button" href="#">See offer</a>
+                              <a class="button" href="#">Ajouter</a>
                               <label for="modal_1" class="button dangerous">
-                                Cancel
+                                Annuler
                               </label>
                             </footer>
                           </article>
@@ -172,7 +173,115 @@ and open the template in the editor.
                 <article class="card more">
                     <header>
                        <h3> LES COMPETITION </h3>
-                       <button> + </button>
+                       <label for="modal_2" class="button">+</label>
+                       <div class="modal">
+                          <input id="modal_2" type="checkbox" />
+                          <label for="modal_2" class="overlay"></label>
+                          <article>
+                            <header>
+                              <h3>Ajouter une nouvelle compétition</h3>
+                              <label for="modal_2" class="close">&times;</label>
+                            </header>
+                            <section class="content">
+                                <form>
+                                    <input type="text" placeholder="Titre du Project"/>
+                                    <div>
+                                        <div>
+                                            <span> Date Début</span>
+                                            <div>
+                                                <select>
+                                                    <option>Mois</option>
+                                                    <option>Janvier</option>
+                                                    <option>Février</option>
+                                                    <option>Mars</option>
+                                                    <option>Avril</option>
+                                                    <option>Mai</option>
+                                                    <option>Juin</option>
+                                                    <option>Juillet</option>
+                                                    <option>Août</option>
+                                                    <option>Septembre</option>
+                                                    <option>Octobre</option>
+                                                    <option>Novembre</option>
+                                                    <option>Décembre</option>
+                                                </select>
+                                            </div>
+                                            <div>
+                                                <select>
+                                                    <option>Année</option>
+                                                    <option>2017</option>
+                                                    <option>2016</option>
+                                                    <option>2015</option>
+                                                    <option>2014</option>
+                                                    <option>2013</option>
+                                                    <option>2012</option>
+                                                    <option>2011</option>
+                                                    <option>2010</option>
+                                                    <option>2009</option>
+                                                    <option>2008</option>
+                                                    <option>2007</option>
+                                                    <option>2006</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div>
+                                            <span> Date Fin</span>
+                                            <div>
+                                                <select>
+                                                    <option>Mois</option>
+                                                    <option>Janvier</option>
+                                                    <option>Février</option>
+                                                    <option>Mars</option>
+                                                    <option>Avril</option>
+                                                    <option>Mai</option>
+                                                    <option>Juin</option>
+                                                    <option>Juillet</option>
+                                                    <option>Août</option>
+                                                    <option>Septembre</option>
+                                                    <option>Octobre</option>
+                                                    <option>Novembre</option>
+                                                    <option>Décembre</option>
+                                                </select>
+                                            </div>
+                                            <div>
+                                                <select>
+                                                    <option>Année</option>
+                                                    <option>2017</option>
+                                                    <option>2016</option>
+                                                    <option>2015</option>
+                                                    <option>2014</option>
+                                                    <option>2013</option>
+                                                    <option>2012</option>
+                                                    <option>2011</option>
+                                                    <option>2010</option>
+                                                    <option>2009</option>
+                                                    <option>2008</option>
+                                                    <option>2007</option>
+                                                    <option>2006</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <textarea placeholder="Description"></textarea>
+                                    <div>
+                                        <div>
+                                            <h3>Les Domaines associés</h3>
+                                            <input type="text" placeholder="Ajouter un nouveau domaine"/>
+                                        </div>
+                                        <div>
+                                            <h3>Les compétences réquises</h3>
+                                            <input type="text" placeholder="Ajouter une nouvelle compétence"/>
+                                        </div>
+                                    </div>
+                                </form>
+                            </section>
+                            <footer>
+                              <a class="button" href="#">Ajouter</a>
+                              <label for="modal_2" class="button dangerous">
+                                Annuler
+                              </label>
+                            </footer>
+                          </article>
+                        </div>
                     </header>
                     <footer>
                         DU CONTENU ICI
@@ -185,5 +294,28 @@ and open the template in the editor.
             </div>
             
         </div>
+        <script type="text/javascript">
+            var monvue = new Vue({
+                el: '#bodyy',
+                data: {
+                  leMessage: 'Suivre',
+                  leMessage2: 'autre'
+                },
+                methods: {
+                  mettreAuRandom: function() {
+                    this.leMessage = ('RND: '+Math.random()).slice(0, 10);
+                  }
+                },
+                computed: {
+                  leMessageEnMajuscules: function() {
+                    return this.leMessage.toUpperCase();
+                  },
+                  toto: {
+                    get: function() { return "TOTO"; },
+                    set: function(v) { this.leMessage = this.leMessage2 = v;}
+                  }
+                }
+              });
+        </script>
     </body>
 </html>
