--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,6 +1,3 @@
-body > div {
-  display: inline-block;
-}
 .menu1 {
     background: yellowgreen;
     position: fixed;
@@ -115,11 +112,8 @@ border: 1px solid ;
 #studentButton{
     font-size: 35px;
 }
-.content {
+.contentt {
     margin-top: 270px;
-   
-	
-    
 }
 
 #form {
