--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -21,7 +21,7 @@ and open the template in the editor.
                 <label><input id="psw" type="password" style="width: 200px" placeholder="Password"/></label> 
                 <button id="buttonColor">Sing in</button>
          </div>
-        <div id="button" class="content">
+        <div id="button" class="contentt">
                     <label for="modal_1" class="button" id="buttonColor">Company</label>
                     <label for="modal_2" class="button" id="buttonColor">Student</label>
             <div class="content">
