[projet adel add background picture]

--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -15,7 +15,7 @@ and open the template in the editor.
     </head>
     
     
-    <body th:inline="text">
+    <body th:inline="text" style="background-image:url(/images/welcome.jpg)" >
         <div id="header">
                 <label><input id="log" type="text" style="width: 200px" placeholder="Login"/> </label>
                 <label><input id="psw" type="password" style="width: 200px" placeholder="Password"/></label> 
